@@ -494,3 +494,6 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
 2004-11-11 Damien <ddouxchamps@users.sf.net>
     * fixed format quadlets per packet access in _dc1394_get_quadlets_per_packet()
 	
+2004-11-12 Damien <ddouxchamps@users.sf.net>
+    * update for previous fix: use NUM_FRAMERATES
+	
